# cutils

./: .gitignore  CMakeLists.txt  make.lua  test.lua
src/: createtable.c  sortinsert.c  vec.c
test/: sortinsert.lua  vec.lua
